# kim-tersoff

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  TODO  Tersoff.cpp  Tersoff.hpp  Tersoff_LAMMPS.kim.tpl  Tersoff_LAMMPS__MD_077075034781_000.kim  kimspec.edn  model_driver_Tersoff.cpp  model_driver_Tersoff.kim  ndarray.hpp  pair_tersoff.cpp  pair_tersoff.hpp  pair_tersoff_zbl.cpp  pair_tersoff_zbl.hpp
helpers/: BjörkasNordlund_NIMB259_2007.ini  DevanathanEtAl_JNuclMater253_1998.ini  ErhartAlbe_PRB71_2005_CSi.ini  HenrikssonEtAl-JPhysCondMat25-2013.ini  Makefile  TODO  Tersoff_PRB37_1988_Si.ini  Tersoff_PRB39_1989_CSi-2.ini  Tersoff_PRB39_1989_CSi.ini  tersoff2lammps.py
